<?xml version="1.0"?>
<package format="3">
  <name>lider_controller</name>
  <version>0.0.1</version>
  <description>Custom local controller (lider) plugin for Navigation2.</description>
  <maintainer email="yamada.hayato.t6@dc.tohoku.ac.jp">hak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>